@@ -25,7 +25,8 @@ The example below copies the bundles for the {{spring}} and {{war}} features def
               <goal>features-add-to-repository</goal>
             </goals>
             <configuration>
-              <descriptors>
+              <descriptors> 
+                <descriptor>mvn:org.apache.karaf.features/standard/3.0.0/xml/features</descriptor>
                 <descriptor>mvn:my.groupid/my.artifactid/1.0.0/xml/features</descriptor>
               </descriptors>
               <features>
@@ -45,7 +46,7 @@ The example below copies the bundles for the {{spring}} and {{war}} features def
 
 h3. Parameters
 || Name || Type || Description ||
-| {{descriptors}} | {{String[]}} | List of features XML descriptors where the features are defined \\ NB: Karaf core features descriptors (standard and enteprise) are automatically added in this list |
+| {{descriptors}} | {{String[]}} | List of features XML descriptors where the features are defined |
 | {{features}} | {{String[]}} | List of features that bundles should be copied to the repository directory |
 | {{repository}} | {{File}} | The directory where the bundles will be copied by the plugin goal |
-| {{karafVersion}} | {{String}} | Target Karaf version to use to resolve the Karaf core features descriptors (standard and enterprise) \\ Default value is the Karaf plugin version |
+
