@@ -205,22 +205,6 @@ name|apache
 operator|.
 name|maven
 operator|.
-name|artifact
-operator|.
-name|resolver
-operator|.
-name|AbstractArtifactResolutionException
-import|;
-end_import
-
-begin_import
-import|import
-name|org
-operator|.
-name|apache
-operator|.
-name|maven
-operator|.
 name|plugin
 operator|.
 name|MojoExecutionException
@@ -239,22 +223,6 @@ name|AbstractFeatureMojo
 extends|extends
 name|MojoSupport
 block|{
-specifier|protected
-specifier|static
-specifier|final
-name|String
-name|KARAF_CORE_STANDARD_FEATURE_URL
-init|=
-literal|"mvn:org.apache.karaf.features/standard/%s/xml/features"
-decl_stmt|;
-specifier|protected
-specifier|static
-specifier|final
-name|String
-name|KARAF_CORE_ENTERPRISE_FEATURE_URL
-init|=
-literal|"mvn:org.apache.karaf.features/enterprise/%s/xml/features"
-decl_stmt|;
 comment|/**      * @parameter      */
 specifier|protected
 name|List
@@ -277,11 +245,6 @@ argument_list|<
 name|String
 argument_list|>
 name|features
-decl_stmt|;
-comment|/**      * the target karaf version used to resolve Karaf core features descriptors      *      * @parameter      */
-specifier|protected
-name|String
-name|karafVersion
 decl_stmt|;
 comment|/**      * @parameter      */
 specifier|protected
@@ -668,7 +631,7 @@ expr_stmt|;
 block|}
 catch|catch
 parameter_list|(
-name|AbstractArtifactResolutionException
+name|Exception
 name|e
 parameter_list|)
 block|{
@@ -681,7 +644,7 @@ throw|throw
 operator|new
 name|RuntimeException
 argument_list|(
-literal|"Can't resolve bundle "
+literal|"Can't resolve artifact "
 operator|+
 name|artifact
 argument_list|,
@@ -692,12 +655,18 @@ block|}
 name|getLog
 argument_list|()
 operator|.
-name|error
+name|warn
 argument_list|(
-literal|"Can't resolve bundle "
+literal|"Can't resolve artifact "
 operator|+
 name|artifact
-argument_list|,
+argument_list|)
+expr_stmt|;
+name|getLog
+argument_list|()
+operator|.
+name|debug
+argument_list|(
 name|e
 argument_list|)
 expr_stmt|;
@@ -965,67 +934,6 @@ name|Feature
 argument_list|>
 argument_list|()
 decl_stmt|;
-if|if
-condition|(
-name|karafVersion
-operator|==
-literal|null
-condition|)
-block|{
-name|Package
-name|p
-init|=
-name|Package
-operator|.
-name|getPackage
-argument_list|(
-literal|"org.apache.karaf.tooling.features"
-argument_list|)
-decl_stmt|;
-name|karafVersion
-operator|=
-name|p
-operator|.
-name|getImplementationVersion
-argument_list|()
-expr_stmt|;
-block|}
-name|addFeatureRepo
-argument_list|(
-name|String
-operator|.
-name|format
-argument_list|(
-name|KARAF_CORE_ENTERPRISE_FEATURE_URL
-argument_list|,
-name|karafVersion
-argument_list|)
-argument_list|)
-expr_stmt|;
-name|addFeatureRepo
-argument_list|(
-name|String
-operator|.
-name|format
-argument_list|(
-name|KARAF_CORE_STANDARD_FEATURE_URL
-argument_list|,
-name|karafVersion
-argument_list|)
-argument_list|)
-expr_stmt|;
-name|addFeatureRepo
-argument_list|(
-name|String
-operator|.
-name|format
-argument_list|(
-name|KARAF_CORE_STANDARD_FEATURE_URL
-argument_list|,
-name|karafVersion
-argument_list|)
-argument_list|)
-expr_stmt|;
 try|try
 block|{
 name|Set
